# zsync

./: Makefile  Makefile.am  Makefile.in  aclocal.m4  client.c  client.h  clientcommand.c  config.h  config.h.in  config.status  configure  format_string.h  http.c  http.h  progress.c  progress.h  url.c
.deps/: base64.Po  client.Po  clientcommand.Po  http.Po  make.Po  makegz.Po  progress.Po  url.Po
autom4te.cache/: output.1  requests  traces.0  traces.1
doc/: Makefile  Makefile.in
librcksum/: Makefile  Makefile.in  md4.h  rsum.c  state.c
librcksum/.deps/: hash.Po  md4.Po  range.Po  rsum.Po  state.Po
libzsync/: Makefile  Makefile.in  sha1.c  zsync.c
libzsync/.deps/: sha1.Po  sha1test.Po  zmap.Po  zsync.Po
zlib/: Makefile  Makefile.in
zlib/.deps/: adler32.Po  compress.Po  crc32.Po  deflate.Po  inflate.Po  inftrees.Po  trees.Po  zutil.Po
